# xgc2-px4-sitl

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-runtime.yml  check-apt-ssh.yml  ci.yml  publish-pages-apt.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_apt_repository.sh  build_deb.sh  build_px4_runtime.sh  build_runtime_deb_in_docker.sh  check_gazebo_mavros_e2e.sh  check_installed_runtime.sh  check_px4_runtime.sh  extract_gazebo_classic_runtime.sh  extract_px4_runtime.sh  fetch_px4.sh  install_from_local_apt_repository.sh  publish_apt_repo.sh
.xgc2/scripts/lib/: manifest.sh
config/: runtime.env
debian/: README.md
launch/: iris.launch  iris_mavros_gazebo.launch
manifest/: px4_runtime.yaml
scripts/: build_apt_repository.sh  build_deb.sh  build_px4_runtime.sh  build_runtime_deb_in_docker.sh  check_gazebo_mavros_e2e.sh  check_gz_sim_runtime.sh  check_installed_runtime.sh  check_px4_runtime.sh  extract_gazebo_classic_runtime.sh  extract_gz_sim_runtime.sh  extract_px4_runtime.sh  fetch_px4.sh  install_from_local_apt_repository.sh  publish_apt_repo.sh  run_px4_sitl.sh  setup_runtime_env.sh  spawn_sdf_model.py
scripts/lib/: manifest.sh
