<?xml version="1.0"?>
<package format="3">
  <name>px4_sitl_runtime</name>
  <version>1.16.2</version>
  <description>ROS 2 package and CI control package for PX4 SITL runtime packages.</description>

  <maintainer email="lxk@example.com">lxk</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>bash</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
